@@ -2,18 +2,23 @@ package pokemon.view;
 
 import jakarta.enterprise.context.SessionScoped;
 import jakarta.enterprise.event.Event;
+import jakarta.faces.application.FacesMessage;
+import jakarta.faces.context.FacesContext;
 import jakarta.inject.Inject;
 import jakarta.inject.Named;
 import jakarta.security.enterprise.SecurityContext;
 import pokemon.chat.ChatMessageEvent;
 import pokemon.chat.ChatWebSocket;
+import pokemon.dto.ChatMessage;
 import pokemon.entity.Trainer;
 import pokemon.service.TrainerService;
 
 import java.io.Serializable;
-import java.util.Collection;
+import java.time.LocalDateTime;
+import java.util.List;
 import java.util.Set;
 import java.util.logging.Logger;
+import java.util.stream.Collectors;
 
 @Named
 @SessionScoped
@@ -48,30 +53,62 @@ public class ChatView implements Serializable {
         this.selectedRecipient = selectedRecipient;
     }
 
-    public String getUsername() {
-        if (securityContext == null || securityContext.getCallerPrincipal() == null) {
-            return null;
+    public String getCurrentUsername() {
+        if (securityContext != null && securityContext.getCallerPrincipal() != null) {
+            return securityContext.getCallerPrincipal().getName();
         }
-        return securityContext.getCallerPrincipal().getName();
+        return null;
     }
 
     public void sendMessage() {
-        // TODO
+        String sender = getCurrentUsername();
+
+        if (sender == null) {
+            addErrorMessage("You must be logged in to send a message.");
+            return;
+        }
+
+        if (messageContent == null || messageContent.trim().isEmpty()) {
+            addErrorMessage("Message content cannot be empty.");
+            return;
+        }
+
+        boolean isPrivate = selectedRecipient != null && !selectedRecipient.trim().isEmpty()
+                && !"ALL".equals(selectedRecipient);
+
+        ChatMessage message = new ChatMessage(
+                sender,
+                isPrivate ? selectedRecipient : null,
+                messageContent.trim(),
+                LocalDateTime.now(),
+                isPrivate
+        );
+
+        logger.info("Sending chat message from " + sender +
+                " to " + (isPrivate ? selectedRecipient : "ALL") +
+                ": " + messageContent);
+
+        chatMessageEvent.fire(new ChatMessageEvent(message));
+        messageContent = "";
     }
 
-    public Collection<Trainer> getOtherTrainers() {
-        String username = getUsername();
-        return trainerService.findAll()
-                .stream()
-                .filter(t -> !t.getLogin().equals(username))
-                .toList();
+    public List<Trainer> getAllUsers() {
+        String currentUser = getCurrentUsername();
+        return trainerService.findAll().stream()
+                .filter(user -> !user.getLogin().equals(currentUser))
+                .collect(Collectors.toList());
     }
 
-    public Set<String> getActiveTrainers() {
-        return ChatWebSocket.getActiveTrainers();
+    public Set<String> getOnlineUsers() {
+        return ChatWebSocket.getOnlineUsers();
     }
 
-    public boolean isTrainerActive(String username) {
-        return true;
+    public boolean isUserOnline(String username) {
+        return ChatWebSocket.getOnlineUsers().contains(username);
+    }
+
+    private void addErrorMessage(String message) {
+        FacesContext.getCurrentInstance().addMessage(null,
+                new FacesMessage(FacesMessage.SEVERITY_ERROR, message, null));
     }
 }
